k8s/flask-app/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: flask-app
spec:
  selector:
    app.kubernetes.io/name: flask-app
  ports:
  - name: flask-app-port
    protocol: TCP
    port: 80
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: flask-app
spec:
  selector:
    app.kubernetes.io/name: mongodb
  ports:
  - name: mongodb-port
    protocol: TCP
    port: 27017
    targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: flask-app
spec:
  selector:
    app.kubernetes.io/name: grafana
  ports:
  - name: grafana-port
    protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: flask-app
spec:
  selector:
    app.kubernetes.io/name: prometheus
  ports:
  - name: prometheus-port
    protocol: TCP
    port: 80
    targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: node-exporter-service
  namespace: flask-app
spec:
  selector:
    app.kubernetes.io/name: node-exporter
  ports:
  - name: node-exporter-port
    protocol: TCP
    port: 90
    targetPort: 9100
