k8s/flask-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  namespace: flask-app
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/flaskapp"
        backend:
          service:
            name: flaskapp
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: flask-app
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/grafana"
        backend:
          service:
            name: grafana
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: flask-app
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/prometheus"
        backend:
          service:
            name: prometheus
            port:
              number: 80
